--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "type": "module",
   "scripts": {
     "dev": "wrangler dev",
+    "seed": "node --loader ts-node/esm prisma/seed.ts",
     "deploy": "wrangler deploy --minify",
     "cf-typegen": "wrangler types --env-interface CloudflareBindings"
   },
@@ -11,7 +12,10 @@
     "hono": "^4.8.5"
   },
   "devDependencies": {
+    "@types/node": "^24.0.14",
     "prisma": "^6.11.1",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.8.3",
     "wrangler": "^4.4.0"
   }
 }
